RESOLVED FIXED 263640
WebVTT Parser should treat negative percentages as invalid values
https://bugs.webkit.org/show_bug.cgi?id=263640
Summary WebVTT Parser should treat negative percentages as invalid values
Kueno
Reported 2023-10-25 01:57:14 PDT
Attachments
Kueno
Comment 1 2023-10-25 01:58:03 PDT
EWS
Comment 2 2023-10-27 20:38:15 PDT
Committed 269882@main (6c997a688fcd): <https://commits.webkit.org/269882@main> Reviewed commits have been landed. Closing PR #19527 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-10-27 20:39:12 PDT
Note You need to log in before you can comment on or make changes to this bug.